   -> block_suspicious_query.conf
   -> custom_error.conf
   -> civicrm.conf
   -> headers.conf
   -> wordpress.conf
   -> ssl.conf
   -> error.html
   -> block_user_agents.conf
- Pre-build config reorg for webserver directory

v1.0.18
=======
- Added server_names_hash_bucket_size to nginx.conf
- Added referer_hash_bucket_size to default.conf

v1.0.19
=======
- changed permissions for wflogs dir - wordfence plugin

v1.0.20
=======
- Added Drupal image
- Added Memcache image (for drupal)
- Added DISABLE_CONF environment variable to nginx-modsec

v1.0.21
======
- Added upgrade steps to upgrade all packages in images on build (excluding those that must be fixed for a specific image, e.g. mariadb)

v1.0.22
=======
- ClamAV integration
- CVE-2020-10543 resolved in nginx-modsec
- CVE-2020-12723 resolved in nginx-modsec
- CVE-2020-13790 resolved in nginx-modsec

v1.1.0
======
- postfix updated to alpine 3.12
- memcache updated to alpine 3.12
- mariadb-alpine updated to alpine 3.12
- update script added to Drupal, so Drupal is upgraded at runtime if image is newer version
- CVE-2020-14422 vulnebility resolved in postfix
- Removed letsencrypt from nginx image, better served via a seperate certbot container
- Renamed Drupal image to drupal7 and added drupal8
- Removed expose port in restingclam image as comms now via unix socket
- Removed permissions.sh execution from wordpress image build
- Added NGINX proxy image
- CVE-2020-14344 resolved in wordpress
- CVE-2020-13902 resolved in wordpress
- CVE-2020-3350 resolved in restingclam
- CVE-2020-3481 resolved in restingclam

v1.1.1
======
- Wordpress updated to v5.5
- CVE-2019-15847 resolved in nginx-modsec and nginx-proxy

v1.1.2 (latest)
======
- Removed client authentication from nginx proxy, only used internally for antivirus over VLAN
- CVE-2020-14363 resolved in wordpress
- Updated MD5 hash for composer download in drupal8
- Resolved maximum recursion depth issue in mariadb configuration
- Wordpress upgraded to 5.5.1